--- a/Html_02/link/Base/Pyt_1.html
+++ b/Html_02/link/Base/Pyt_1.html
@@ -8,15 +8,15 @@
     <body>
         <h1>HOW-TO: Программа на Python, Часть 1</h1>
             <ul>
-                <li><i>Программа на Python &mdash; часть 1</i></li>
-                <li><i>Программа на Python &mdash; часть 2</i></li>
-                <li><i>Программа на Python &mdash; часть 3</i></li>
+                <li><i><a href="Pyt_1.html">Программа на Python &mdash; часть 1</a></i></li>
+                <li><i><a href="Pyt_2.html">Программа на Python &mdash; часть 2</a></i></li>
+                <li><i><a href="Pyt_3.html">Программа на Python &mdash; часть 3</a></i></li>
             </ul>
-        <h2>Содержание</h2>
+        <h2 id="sod">Содержание</h2>
             <strong>HOW-TO: Программа на Python, Часть 1</strong>
             <ul>
-                <li><ins>Наша первая Программа</ins></li>
-                <li><ins>Пример цикла For</ins></li>
+                <li><a href="#nash">Наша первая Программа</a></li>
+                <li><a href="#prim">Пример цикла For</a></li>
             </ul>
         <p>Из множества существующих языков программирования Python &mdash; один из самых лёгких
         в изучении. Он создан в конце 80 &ndash; х годов XX века, но с тех пор он сильно изменился.
@@ -24,7 +24,8 @@
         обращают внимания при выборе языка для изучения. В этой статье мы рассмотрим
         создание консольных приложений, а в следующей &mdash; программирование графических
         интерфейсов (<ins>GUI</ins>). Давайте создадим простую программу прямо сейчас.</p>
-        <h2>Наша первая програмам</h2>
+        <h2 id="nash">Наша первая программа</h2>
+        <a href="#sod">К содержанию</a>
         <p>Наберём код в текстовом редакторе(например, в <b>gedit</b>). Потом мы разберемся, 
             что делает каждая строка и пойдём дальше.</p>
         <p>Введите эти 4 строки:</p>
@@ -44,7 +45,8 @@
                         Hello there, Ferd Burphel!<br>
                         greg@earth:&#126/python_examples&#36</code>
         <p>Вот и всё.</p>
-        <h2>Пример цикла For</h2>
+        <h2 id="prim">Пример цикла For</h2>
+        <a href="#sod">К содержанию</a>
         <p>Теперь давайте рассмотрим пример программирования цикла. Запустите текстовый 
                         редактор и наберите следующую программу:</p>
             <code>#!/usr/bin/env python<br> 
